# euvox

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
apps/agent_service/: pyproject.toml
apps/agent_service/src/agent_service/: config.py  tasks.py
apps/agent_service/src/agent_service/agents/: counterfactual.py  designer.py  history.py
apps/control_api/: pyproject.toml
apps/control_api/src/control_api/: config.py  database.py  main.py  schemas.py
apps/control_api/src/control_api/routers/: clients.py  experiments.py  jobs.py  mod_versions.py  runs.py
apps/evaluation_service/: pyproject.toml
apps/evaluation_service/src/evaluation_service/: celery_app.py  config.py  tasks.py
apps/mod_builder_service/: pyproject.toml
apps/mod_builder_service/src/mod_builder_service/: celery_app.py  config.py  main.py  tasks.py
apps/optimizer_service/: pyproject.toml
apps/optimizer_service/src/optimizer_service/: celery_app.py  config.py  optimizers.py  tasks.py
apps/parser_service/: pyproject.toml
apps/simulation_client/: pyproject.toml
apps/simulation_client/src/simulation_client/: api_client.py  config.py  console_automator.py  eu5_installer.py  eu5_locator.py  eu5_runner.py  main.py  runner.py  worker.py
apps/surrogate_service/: pyproject.toml
apps/surrogate_service/src/surrogate_service/: celery_app.py  config.py  tasks.py
docs/: AGENT_LAYER.md  ARCHITECTURE.md  CODEX_GUIDELINES.md  DATA_MODEL.md  DEVELOPMENT_GUIDELINES.md  EVALUATION_PIPELINE.md  MICROSERVICES.md  MILESTONES.md  MOD_BUILD_PIPELINE.md  OPERATION_REGISTRY.md  OPTIMIZATION_STRATEGY.md  PROJECT_OVERVIEW.md  REPRODUCIBILITY.md  SEARCH_SPACE.md  SIMULATION_CLIENT.md  agent_readme.md
docs/adr/: 0001-monorepo.md  0002-operation-registry.md  0003-rabbitmq-celery.md  0004-versioned-evaluations.md  0005-baseline-saves-over-new-game-automation.md
docs/codex/: FIRST_TASKS.md  TASK_TEMPLATE.md
docs/theory/: 01_project_idea.md  02_architecture.md  03_monorepo_structure.md  04_contracts.md  05_services.md  06_optimization_strategy.md  07_development_guidelines.md  08_agent_tasks.md  README.md
infra/migrations/: env.py
infra/migrations/versions/: 001_initial_schema.py  002_add_evaluation_tables.py  003_add_agent_reviews.py
tests/golden/create_event/: byzantine_revival.txt  byzantine_revival_l_english.yml  ottoman_expansion.txt  ottoman_expansion_l_english.yml
tests/integration/: conftest.py  test_agent_review.py  test_control_api.py  test_create_event_pipeline.py  test_eu5_runner_integration.py  test_evaluate_run.py  test_optimizer.py  test_simulation_client.py  test_surrogate.py
tests/unit/: test_agents.py  test_create_event.py  test_eu5_runner.py  test_evaluation.py  test_imports.py  test_mod_building.py  test_optimizers.py  test_schemas.py  test_surrogate_model.py
