[project]
name = "euvox-agent-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "euvox-core",
    "euvox-common-schemas",
    "euvox-agent-protocol",
    "structlog>=24.4",
    "pydantic-settings>=2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_service"]
