[project]
name = "euvox-evaluation-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "euvox-core",
    "euvox-eu5-parser",
    "euvox-metrics",
    "celery>=5.4",
    "structlog>=24.4",
    "pydantic-settings>=2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evaluation_service"]
