[project]
name = "euvox-mod-builder-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "euvox-core",
    "euvox-operation-registry",
    "euvox-mod-rendering",
    "euvox-artifact-store",
    "celery>=5.4",
    "aiofiles>=24.1",
    "structlog>=24.4",
    "pydantic-settings>=2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mod_builder_service"]
