[project]
name = "euvox-parser-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "euvox-core",
    "euvox-common-schemas",
    "euvox-eu5-parser",
    "celery>=5.4",
    "aiofiles>=24.1",
    "structlog>=24.4",
    "pydantic-settings>=2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parser_service"]
