[project]
name = "euvox-simulation-client"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "euvox-core",
    "euvox-client-protocol",
    "httpx>=0.27",
    "aiofiles>=24.1",
    "structlog>=24.4",
    "pydantic-settings>=2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simulation_client"]
