[project]
name = "euvox-simulation-client"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "euvox-common-schemas",
    "httpx>=0.27",
    "aiofiles>=24.1",
    "structlog>=24.4",
    "pydantic-settings>=2.6",
]

[project.scripts]
simulation-client = "simulation_client.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simulation_client"]
